--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,20 @@ dependencies:
   json_annotation: ^4.8.0
   get: ^4.6.5
 
+  ###
+  ### FIREBASE
+  ###
+  firebase_core: ^2.5.0
+  firebase_auth: ^4.2.6
+  cloud_firestore: ^4.4.4
+
+  ###
+  ### AUTH
+  ###
+  crypto: ^3.0.2
+  google_sign_in: ^6.0.2
+  sign_in_with_apple: ^4.3.0
+
 dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
